- Fixed: "reformatx" did not respect user-defined padding value when computing
    Jacobian maps (Issue #4564).
- Fixed: label mode of "avg_adm" tool was broken.
- Fixed: "avg_adm" now gives consistent results regardless of number of
    CPUs. Also fixed minor bug that would have broken this altogether if there
    were more CPUs than pixels in an image row.
- Fixed: avg_adm tests crashed on MPI; bug also affected non-MPI build
    (Issue #4571).

- Testing: run all warp and warpx tests in "fast" mode
- Testing: added tests, inputs, and baselines for "avg_adm" tool.

- Removed: deformation strain tensor computation was untested and unused; thus
    removed.
- Removed: partial read support for AVW file format removed
- Removed: support for legacy typedstream studies removed; Nrrd should be able
    to replace this if needed.

Release CMTK-1.2.0 (2010-01-06):

- Added: cmtk::Console can now determine terminal line width on POSIX systems,
    and this is used by cmtk::CommandLine to format command line help output
    with the correct line breaking.
- Added: new, experimental implementation of pairwise image registration,
    with more accurate metric computation and support for arbitrary floating
    image interpolation. These are accessible through the new "registrationx"
    command line tool.
- Added: single-step mass-preserving reformatting in reformatx tool. Also
    added a new test to cover this.
- Added: "convertx" tool, which will replace "convert" in the long term but is
    designed to apply all operations given on the command line in the exact
    order that they are specified and with arbitrary repetitions. This is in
    response to Issue #3784.

- Improved: more sophisticated install and packaging configuration; still not
    fully clear how that translates into separated packages for different
    components.
- Improved: ported everything related to Qt to use the actual Qt4 classes, so